<resources>
    <string name="app_name">Grapevine</string>
    <string name="menu_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_create_new_account">CreateNewAccount</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="title_activity_event_page">Event_page</string>
    <string name="search_result">Search Result</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Profile</string>
    <string name="navigation_item_3">Feeds</string>
    <string name="navigation_item_4">Events</string>
    <string name="navigation_item_5">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_feeds">FeedsActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_view_event">ViewEventActivity</string>
    <string name="title_activity_view_feed">ViewFeedActivity</string>
    <string name="title_activity_make_event">MakeEventActivity</string>
    <string name="title_activity_make_feed">MakeFeedActivity</string>
    <string name="event_title">Event Title</string>
    <string name="display_location">Display Location</string>
    <string name="google_maps">Google Maps</string>
    <string name="exact_location">Exact Location</string>
    <string name="Next">Next</string>
    <string name="discoverable">Discoverable</string>
    <string name="title_activity_create_event2">CreateEventActivity2</string>
    <string name="finish">Finish</string>
    <string name="description_hint">Event Description Here</string>
    <string name="tag_hint">Enter tags separated by a new line (optional)</string>
    <string name="feed_title_hint">Feed Title</string>
    <string name="radius">Radius</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="title_activity_create_feed2">CreateFeedActivity2</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_change_email">ChangeEmailActivity</string>
    <string name="change_email">Change Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="bio_here">Your Bio Here</string>
    <string name="bio">Bio:</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="attended_default">Events Attended: 0</string>
    <string name="created_default">Events Created: 0</string>
    <string name="start_date">Start Date:</string>
    <string name="title_activity_maps">Map</string>
    <string name="comments">Comments:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="radius_label">Radius:</string>
    <string name="tags">Tags:</string>
    <string name="start_time_label">Start Time:</string>
    <string name="end_time_label">End Time:</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="title_activity_edit_event2">EditEventActivity2</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_searachable">SearachableActivity</string>
    <string name="title_activity_edit_feed">EditFeedActivity</string>
    <string name="title_activity_edit_feed2">EditFeedActivity2</string>
    <string name="end_date">End Date:</string>
    <string name="delete">delete</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_week">This Week</string>
    <string name="future">Future</string>
    <string name="my_events">My Events</string>
    <string name="events_attending">Events Attending</string>
    <string name="a">A</string>
    <string name="m">M</string>
    <string name="attend">Attend</string>
    <string name="maybe">Maybe</string>
    <string name="not_going">Not Going</string>
    <string name="dialog_share_event">Click Share to copy the search text onto your clipboard.</string>
</resources>
