<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.oose2015.grapevine.Activities.CreateEventActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:minHeight="?attr/actionBarSize" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_feed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_bar">
        <EditText
            android:id="@+id/feed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feed_title_hint"
            android:textColor="@color/textColorPrimary"
            android:textSize="24dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_display_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_layout_feed_title">
            <EditText
                android:id="@+id/display_location"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/display_location"
                android:textColor="@color/textColorPrimary"
                android:textSize="24dp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/maps_button_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_layout_display_location"
            android:textColor="@color/textColorPrimary"
            android:textSize="18dp"
            android:text="@string/exact_location"/>

        <Button
            android:layout_marginTop="2dp"
            android:layout_width="fill_parent"
            android:layout_below="@id/maps_button_label"
            android:layout_height="wrap_content"
            android:text="@string/google_maps"
            android:textColor="#FFFFFF"
            android:textSize="24dp"
            android:id="@+id/google_maps_button"
            android:background="@color/colorPrimary"
            android:onClick="onClickGoogleMaps" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/google_maps_button">
        <EditText
            android:id="@+id/radius"
            android:layout_marginTop="15dp"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radius"
            android:textColor="@color/textColorPrimary"
            android:textSize="24dp"/>
        </android.support.design.widget.TextInputLayout>


        <CheckBox
            android:id="@+id/checkbox_allday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All Day"
            android:textColor="@color/textColorPrimary"
            android:textSize="24dp"
            android:layout_below="@id/input_layout_radius"
            android:onClick="setTimePicker"/>

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/start_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_allday"
            android:textColor="@color/textColorPrimary"
            android:textSize="18dp"
            android:text="@string/start_time"/>

        <TimePicker
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_picker_start"
            android:layout_below="@id/start_time_label"
            android:layout_marginRight="282dp"
            android:visibility="visible" >
        </TimePicker>

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/end_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_picker_start"
            android:textColor="@color/textColorPrimary"
            android:textSize="18dp"
            android:text="@string/end_time"/>

        <TimePicker
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_picker_end"
            android:layout_below="@id/end_time_label"
            android:layout_marginRight="282dp"
            android:visibility="visible" >
        </TimePicker>

        <Button
            android:layout_marginTop="15dp"
            android:layout_width="fill_parent"
            android:layout_below="@id/time_picker_end"
            android:layout_height="80dp"
            android:text="@string/Next"
            android:textColor="#FFFFFF"
            android:textSize="24dp"
            android:id="@+id/next_button"
            android:background="@color/colorPrimary"
            android:onClick="onClick" />

    </RelativeLayout>
</ScrollView>