<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oose2015.grapevine.Activities.ProfileActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.oose2015.grapevine.Activities.CreateEventActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_bar"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="@color/textColorPrimary"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textColor="@color/textColorPrimary"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/bio_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="15dp"
            android:text="@string/bio"
            android:textColor="@color/textColorPrimary"
            android:textSize="18dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bio_label">

            <EditText
                android:id="@+id/bio_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bio_label"
                android:layout_marginTop="2dp"
                android:editable="true"
                android:ems="10"
                android:enabled="true"
                android:focusable="true"
                android:gravity="top"
                android:hint="@string/bio_here"
                android:inputType="textMultiLine"
                android:isScrollContainer="true"
                android:maxLines="6"
                android:minLines="6"
                android:padding="24dp"
                android:textIsSelectable="true"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/finish_button"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_below="@id/input_layout_description"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/confirm_changes"
            android:textColor="#FFFFFF"
            android:textSize="24dp" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/main_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:itemTextColor="@color/textColorSecondary"
        app:menu="@menu/menu_drawer" />

</android.support.v4.widget.DrawerLayout>