<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.oose2015.grapevine.Activities.CreateEventActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:minHeight="?attr/actionBarSize" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/description_area"
        android:editable="true"
        android:enabled="true"
        android:minLines="6"
        android:maxLines="6"
        android:isScrollContainer="true"
        android:hint="@string/description_hint"
        android:textIsSelectable="true"
        android:focusable="true"
        android:gravity="top"
        android:padding="24dp"
        android:textSize="20dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_description">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/tag_area"
        android:editable="true"
        android:enabled="true"
        android:minLines="6"
        android:maxLines="6"
        android:isScrollContainer="true"
        android:hint="@string/tag_hint"
        android:textIsSelectable="true"
        android:focusable="true"
        android:gravity="top"
        android:padding="24dp"
        android:textSize="20dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_below="@id/input_layout_tags"
        android:layout_height="80dp"
        android:text="@string/finish"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        android:id="@+id/finish_button"
        android:background="@color/colorPrimary"
        android:onClick="onClick" />

</RelativeLayout>